objects/ssot__LocationGroupProdExclChg__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChangeDateTime__c</fullName>
        <label>Change Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalLocationGroupIdentifier__c</fullName>
        <label>External Location Group Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalLocationIdentifier__c</fullName>
        <label>External Location Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Location Grp Product Exclusion Change Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeleted__c</fullName>
        <label>Is Deleted</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationGroupId__c</fullName>
        <label>Location Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SKUNumber__c</fullName>
        <label>Stock Keeping Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708941911825_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocationGroupProdExclChg_LocationGro_rel</label>
        <referenceTo>ssot__LocationGroup__dlm</referenceTo>
        <relationshipLabel>LocationGroupProdExclChg_LocationGro_rel</relationshipLabel>
        <relationshipName>rel_1708941911825_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708941913015_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocationGroupProdExclChg_LocationId__rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>LocationGroupProdExclChg_LocationId__rel</relationshipLabel>
        <relationshipName>rel_1708941913015_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708941916186_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocationGroupProdExclChg_ProductId_m_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>LocationGroupProdExclChg_ProductId_m_rel</relationshipLabel>
        <relationshipName>rel_1708941916186_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>